2015-05-05 Niels Grewe <niels.grewe@halbordnung.de>

	* GSFIFO.m: Fix a potential race condition in -peekObject.

2015-05-05 Niels Grewe <niels.grewe@halbordnung.de>

	* GSFIFO.[hm]: Add methods to peek at the top/front object in the
	FIFO without removing it.

2015-04-28 Niels Grewe <niels.grewe@halbordnung.de>

	* GSFIFO.m: Use -autorelease rather than -release when returning
	objects from a FIFO. Fixes a bug where a returned reference would
	already be invalid because the FIFO was the last owner of the object.

2015-01-09 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSFIFO.[hm]: add methods for working with objects and handling
	retain/release to treat a FIFO as a container.

2014-11-12 Riccardo Mottola <rm@gnu.org>

	* GSThreadPool.m
	* GSSkipMutableArray.m
	* GSCache.m
	Import inttypes.h for pointer formatting

2014-11-12 Riccardo Mottola <rm@gnu.org>

	* GSThreadPool.h
	Forward-declare NSRecursiveLock, not NSLock

2014-07-11  Yavor Doganov  <yavor@gnu.org>

	* GNUmakefile (LIBRARIES_DEPEND_UPON): Define.

2014-04-26 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSUniqued.h:
	* GSUniqued.m:
	* Performance.h:
	* GNUmakefile:
	New code to implement uniqued copies of objects for lowered memory
	footprint and faster collection lookups.

2013-11-05 Niels Grewe <niels.grewe@halbordnung.de>

	* GSFIFO.m: Fix calculation of the timeout for cooperating
	get/put.

2013-08-21 Richard Frith-Macdonald  <rfm@gnu.org>

	* GSFIFO.m: 64bit printf format changes
	* GSSkipMutableArray.m: 64bit printf format changes
	* GSCache.m: Fix mime size calculations for nonfragile abi.
	Change API to use NSUInteger for sizes
	* GNUmakefile: bump version fro new release

2013-06-25 Richard Frith-Macdonald  <rfm@gnu.org>

        * GNUmakefile: bump subminor version 
	* GSIOThreadPool.h:
	* GSIOThreadPool.m:
        Add default for initialisation of shared pool, fix bug in setting
        new thread and add code for shrinking the pool size (previously